...
                                <rect key="frame" x="19" y="716" width="168" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="zero"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="168" id="7ie-Sk-hXV"/>
...
                                <rect key="frame" x="195" y="628" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="three"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="9Nq-VL-jJB"/>
...
                                <rect key="frame" x="107" y="628" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="two"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="Idt-EQ-02a"/>
...
                                <rect key="frame" x="19" y="628" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="one"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="Die-aL-UYn"/>
...
                                <rect key="frame" x="19" y="540" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="four"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="NfY-Bm-HgM"/>
...
                                <rect key="frame" x="19" y="452" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="seven"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="Mbf-ol-NZk"/>
...
                                <rect key="frame" x="107" y="452" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="eight"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="cNk-Am-HKe"/>
...
                                <rect key="frame" x="195" y="452" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="nine"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="6FG-bg-zJY"/>
...
                                <rect key="frame" x="19" y="364" width="80" height="80"/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="clean"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="7S6-84-udK"/>
...
                                <rect key="frame" x="107" y="540" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="five"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="wFX-Ds-cAN"/>
...
                                <rect key="frame" x="195" y="540" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="six"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="Ea5-QT-1p0"/>
...
                                <rect key="frame" x="283" y="716" width="80" height="80"/>
                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="total"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="OyU-wd-zXq"/>
...
                                <rect key="frame" x="283" y="628" width="80" height="80"/>
                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="plus"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="Asf-69-PII"/>
...
                                <rect key="frame" x="283" y="540" width="80" height="80"/>
                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="minus"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="CFJ-G6-YEw"/>
...
                                <rect key="frame" x="283" y="452" width="80" height="80"/>
                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
